5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1594_1801.log
== TEST (2019-03-26 22:53:17) 
-- CODE:
a = input("abra b")
b = lol
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = lol
NameError: name 'lol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 22:53:31) 
-- CODE:
a = input("abra (b)")
b = lol
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = lol
NameError: name 'lol' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:20:17) 
-- CODE:
z = "abra"
a = input("lol")
b = int(input(4))
d = z+a*b
print(d)

-- OUTPUT:
4abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:23:27) 
-- CODE:
z = input()
n = int(input())
d = "lol"


print("abra +d "*n)

-- OUTPUT:
abra +d abra +d abra +d abra +d abra +d abra +d abra +d abra +d
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:23:44) 
-- CODE:
z = input()
n = int(input())
d = "lol"


print("abra + d "*n)

-- OUTPUT:
abra + d abra + d abra + d abra + d abra + d abra + d abra + d abra + d
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:24:16) 
-- CODE:
n = int(input())
d = input(lol)


print("abra + d "*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:24:19) 
-- CODE:
n = int(input())
d = input(lol)


print("abra + d "*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:24:21) 
-- CODE:
n = int(input())
d = input(lol)


print("abra + d "*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:24:32) 
-- CODE:
n = int(input())
d = input("lol")


print("abra + d "*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:24:42) 
-- CODE:
n = int(input())
d = input("lol")


print("abra + d "*n)

-- EXECUTION TIME:
0.132453
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1801/main.py", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:25:03) 
-- CODE:
n = int(input())
d = input("lol")


print("abra" + d*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:25:13) 
-- CODE:
n = int(input())
d = input("lol")


print("abra"*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:27:32) 
-- CODE:
n = int(input())
d = "lol"


print("abra+d"*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:27:45) 
-- CODE:
n = int(input())
d = "lol"


print("abra + d"*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:28:16) 
-- CODE:
d = "lol"
n = int(input())


print("abra + d"*n)

-- EXECUTION TIME:
0.229657
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1801/main.py", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:28:17) 
-- CODE:
d = "lol"
n = int(input())


print("abra + d"*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:29:18) 
-- CODE:
d = "lol"
n = int(input())


print(("abra + d ")*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:29:22) 
-- CODE:
d = "lol"
n = int(input())


print(("abra + d ")*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:30:08) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra" + d )*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:30:20) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra" + d + " " )*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:30:24) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra" + d + " " )*n)

-- EXECUTION TIME:
0.207935
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1801/main.py", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:30:30) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra" + d + " " )*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:30:42) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra" + " "+ d + " " )*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:30:47) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra" + " "+ d + " " )*n)

-- EXECUTION TIME:
0.152427
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1801/main.py", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:30:54) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra" + " "+ d + " " )*n)

-- EXECUTION TIME:
0.175301
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1801/main.py", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:30:54) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra" + " "+ d + " " )*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:31:27) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra"+d+ " ")*n)

-- EXECUTION TIME:
0.137781
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1801/main.py", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:31:29) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra"+d+ " ")*n)

-- EXECUTION TIME:
0.130969
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1801/main.py", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:31:29) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra"+d+ " ")*n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:31:33) 
-- CODE:
d = "lol"
n = int(input())


print(("Abra"+d+ " ")*n)

-- EXECUTION TIME:
0.156269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1801/main.py", line 2, in <module>
    n = int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:31:52) 
-- CODE:
d = input()
n = int(input())


print(("Abra"+d+" ")*n)

-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:31:57) 
-- CODE:
d = input()
n = int(input())


print(("Abra"+d+" ")*n)

-- EXECUTION TIME:
0.14448
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 23:32:04) 
-- CODE:
d = input()
n = int(input())


print(("Abra" " "+d+" ")*n)

-- EXECUTION TIME:
0.137732
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
